# microecta

./: CHANGELOG.md  ChangeLog.md  LICENSE  README.md  microecta.cabal
.github/workflows/: ci.yml
benchmarks/: Benchmarks.hs
scripts/: release.sh
src/Application/TermSearch/: Dataset.hs  TermSearch.hs  Type.hs  Utils.hs
src/Data/: ECTA.hs  Memoization.hs
src/Data/ECTA/: Paths.hs  Term.hs
src/Data/ECTA/Internal/: Paths.hs  Term.hs
src/Data/ECTA/Internal/ECTA/: Enumeration.hs  Operations.hs  Type.hs
src/Data/ECTA/Internal/Paths/: Zipper.hs
src/Data/HashTable/: Extended.hs
src/Data/Interned/Extended/: HashTableBased.hs
src/Data/Persistent/: UnionFind.hs
src/Data/Text/Extended/: Pretty.hs
src/Utility/: Fixpoint.hs  HashJoin.hs
test/: ECTASpec.hs  PathsSpec.hs  Spec.hs
test/Utility/: HashJoinSpec.hs
